--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 									</header>
 									<p>Whether you're looking to collaborate on a software project, discuss innovative ideas, or just connect within the tech space, I’m always open to a conversation. Let’s build something great together.</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="https://mail.google.com/mail/u/?authuser=USERNAME@DOMAIN.COM">kevinabelkoros@gmail.com</a></li>
+										<li class="icon solid fa-envelope"><a href="https://mail.google.com/mail/u/?authuser=USERNAME@DOMAIN.COM">engkvnkoros@gmail.com</a></li>
 										<li class="icon solid fa-phone">0798450702</li>
 										<li class="icon solid fa-home">Mirema Drive, Kasarani, Nairobi</li>
 									</ul>
@@ -169,5 +169,6 @@
 
 	</body>
 </html>
+
 
 
